# Savage2-Launcher

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml
docker/: Dockerfile.linux
docs/: game-client-login-connect.md  known-issues.md  launcher-clean-auth.md
src/: i18n.ts  main.tsx  styles.css
src-tauri/: .tauri_private_key.pub  Cargo.toml  tauri.conf.json
src-tauri/helper_executable/: Cargo.toml
src-tauri/helper_executable/src/: helper_executable.d  main.rs
src-tauri/icons/: icon.icns
src-tauri/locales/: de.yml  en.yml  es.yml  fr.yml  pt.yml  ru.yml
src-tauri/src/: main.rs  mods.rs  replays.rs  server_browser.rs  utils.rs
src-tauri/src/app_profile/: mod.rs  official_setlist.rs  s2.rs  yarg.rs
src/dialogs/: DialogProvider.module.css  DialogProvider.tsx  dialogUtil.ts
src/hooks/: useCachedImage.ts  useChangelog.ts  useLauncherUpdater.ts  useMatchUserOutcomes.ts  useMatches.ts  useModDetail.ts  useModSync.ts  useMods.ts  useNews.ts  useNewsArticle.ts  useNewsAuthor.ts  useReplayStatus.ts  useS2Release.ts  useS2Version.ts  useServers.ts  useSetlistData.ts  useSetlistRelease.ts  useYARGRelease.ts  useYARGVersion.ts
src/routes/: index.tsx  root.tsx
src/stores/: AuthStore.ts  BrowsePrefsStore.ts  DownloadHistoryStore.ts  ModsStore.ts  S2StateStore.ts  ServerFavouritesStore.ts  SetlistStateStore.ts  ToastStore.ts  VaultStore.ts  YARGStateStore.ts
src/tasks/: index.ts  payload.ts
tools/: generate-manifest.bat  generate_manifest.py
(+176 files in other folders)
