workspace = { members = ["helper_executable"] }
[package]
name = "s2_launcher"
version = "1.0.1"
description = "Savage 2 launcher"
authors = ["Savage 2"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.5.2", features = [ "http-all",
    "os-all",
    "dialog-all",
    "shell-open",
    "system-tray",
    "updater",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip-extract = "0.1.2"
tar = "0.4"
flate2 = "1.0"
directories = "5.0.1"
sevenz-rust = { version = "0.4.3", features = ["aes256"] }
window-shadows = "0.2.1"
minisign = "0.7.5"
opener = { version = "0.6.1", features = ["reveal"] }
async-trait = "0.1.74"
regex = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
